kubernetes/ingress-controller/deployment-descriptor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-nginx
  labels:
    component: deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      component: front-end

  template:
    metadata:
      labels:
        component: front-end
    spec:
      containers:
        - name: mynginx
          image: nginx
