kubernetes/ingress-controller/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice

spec:
  selector:
    component: front-end

  ports:
    - port: 80
