kubernetes/ingress-controller/ingress-controller-with-rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules-controller

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: myservice
              servicePort: 80
